--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipe</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href=""></a>Bread</li>
+        </ul>
     
 </body>
 </html>
