--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -4,33 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bread</title>
 </head>
 <body>
     <h1>Bread</h1>
-    <img src="../img/image.webp" alt="Picture of a Lasagna dish">
+    <img src="../img/bread.webp" alt="Picture of a Lasagna dish">
     <h2>Carrot Bread</h2>
     <p>This carrot bread is really a cross between cake and a loaf of bread. Serving it warm with butter or cream cheese is ideal. It's really good!</p>
     <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>2½ cups all-purpose flour</li>
+            <li>1 cup white sugar</li>
+            <li>1 teaspoon baking powder</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>3 eggs, beaten</li>
+            <li>1 (3.5 ounce) package flaked coconut</li>
+            <li>2 cups shredded carrots</li>
+            <li>½ cup maraschino cherries, chopped</li>
+            <li>½ cup chopped walnuts</li>
         </ul>
     <h4>Steps</h4>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
+            <li>In a large bowl, sift together flour, sugar, baking powder, baking soda, cinnamon, and salt. Combine eggs, oil, and milk; stir into flour mixture until well blended. Stir in carrots, coconut, cherries, raisins, and walnuts. Pour batter into prepared pan.</li>
+            <li>Bake in the preheated oven 50 to 60 minutes, or until a toothpick inserted into center of the loaf comes out clean. Let cool on a wire rack for 10 minutes before removing from the pan to cool completely. Store in plastic wrap to keep moist.</li>
         </ol>
 </body>
 </html>
